<resources>
    <string name="app_name">Lab5m1</string>
    <string name="button0">BUTTON0</string>
    <string name="button1">BUTTON1</string>
    <string name="button2">BUTTON2</string>
    <string name="button3">BUTTON3</string>
    <string name="button4">BUTTON4</string>
    <string name="button5">BUTTON5</string>
    <string name="button6">BUTTON6</string>
    <string name="button7">BUTTON7</string>
    <string name="button8">BUTTON8</string>
    <string name="button9">BUTTON9</string>
    <string name="button10">BUTTON10</string>
    <string name="button11">BUTTON11</string>
    <string name="button12">BUTTON12</string>
    <string name="button13">BUTTON13</string>
    <string name="button14">BUTTON14</string>
</resources>