<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/leftBlock1"
        android:layout_width="210dp"
        android:layout_height="450dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:gravity="top"
            android:text="@string/green" />

        <!-- Blue -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_primary"
            android:text="@string/blue"
            android:textColor="#070707"
            android:gravity="center" />

        <!-- Yellow -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="#FFEB3B"
            android:text="@string/yellow"
            android:gravity="bottom|end"
            />
    </LinearLayout>



    <!-- 오른쪽 상단 블록들 -->

    <LinearLayout
        android:id="@+id/topBlock1"
        android:layout_width="200dp"
        android:layout_height="450dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/leftBlock1"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Green -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="top"
            android:text="@string/green" />

        <!-- Pink -->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#ead1dc"
            android:gravity="center"
            android:text="@string/pink" />

        <!-- Gray -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#009688"
            android:gravity="bottom|end"
            android:text="@string/gray" />
    </LinearLayout>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        app:alignmentMode="alignMargins"
        app:columnCount="3"
        app:columnOrderPreserved="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftBlock1"
        app:rowCount="6"
        app:rowOrderPreserved="false"
        app:useDefaultMargins="true"
        tools:layout_editor_absoluteX="-49dp">

        <!-- Row 0 : 0 1 2 -->
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button0"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button1"
            android:textSize="12sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button2"
            android:textSize="12sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button3"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button4"
            android:textSize="12sp"
            app:layout_column="1"
            app:layout_columnWeight="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button5"
            android:textSize="12sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button6"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button7"
            android:textSize="12sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button8"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button9"
            android:textSize="12sp"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"
            app:layout_row="3" />

        <!-- Row 4 : 10 11 12 -->
        <Button
            android:id="@+id/btn10"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button10"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button11"
            android:textSize="12sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn12"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button12"
            android:textSize="12sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="4" />

        <!-- Row 5 : 13 14 -->
        <Button
            android:id="@+id/btn13"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button13"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn14"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:padding="2dp"
            android:text="@string/button14"
            android:textSize="12sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="5" />
    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
